--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t stefaneng/comp490-primer
+  - docker build -t stefaneng/comp490-primer .
   - docker run -d -p 127.0.0.1:80 stefaneng/comp490-primer
   - docker ps -a
   - docker run stefaneng/comp490-primer /bin/sh -c "true"
