Cat markdown file in cgi-bin
Other changes to some config stuff in httpd config and moving around files

--- a/public_html/.htaccess
+++ b/public_html/.htaccess
@@ -8,5 +8,5 @@
     # Handle Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.py [L]
+    RewriteRule ^ index.cgi [L]
 </IfModule>
