--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ before_install:
   - docker run stefaneng/comp490-primer /bin/sh -c "true"
 
 script:
-  - curl localhost
+  - curl -i localhost/cgi-bin/index.cgi
