--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,10 @@ script:
   - curl -i localhost/cgi-bin/index.cgi
 
 after_success:
-  - mkdir build
-  - mv * build
-  - tar -czf package.tgz build
+  - tar -zcf package.tgz *
   - export SSHPASS=$DEPLOY_PASS
-  - sshpass -e scp package.tgz $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH
+  - sshpass -e scp -o stricthostkeychecking=no package.tgz $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH
+  - sshpass -e ssh $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH pwd
 
 env:
   global:
