Refractor packaging to own script and add tests against pull requests

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,11 +20,7 @@ script:
   - curl -i localhost/cgi-bin/index.cgi
 
 after_success:
-  - tar -zcf package.tgz public_html
-  - export SSHPASS=$DEPLOY_PASS
-  - sshpass -e scp -o stricthostkeychecking=no package.tgz $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH
-  - sshpass -e scp -o stricthostkeychecking=no deploy.sh $DEPLOY_USER@$DEPLOY_HOST:$DEPLOY_PATH
-  - sshpass -e ssh -o stricthostkeychecking=no $DEPLOY_USER@$DEPLOY_HOST $DEPLOY_PATH/deploy.sh
+  - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "master" && ./package.sh
 
 env:
   global:
